fix: #1632 Toast doesn't display on IE (#1631)

--- a/packages/elements/src/styles/components/toast.scss
+++ b/packages/elements/src/styles/components/toast.scss
@@ -8,10 +8,14 @@
   bottom: 0;
   left: 0;
   transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  -webkit-transform: translateY(100%);
   transition: transform 0.2s ease-in-out;
 
   &.visible {
     transform: translateY(calc(#{$layout-base} * -1));
+    -ms-transform: translateY(-$layout-base);
+    -webkit-transform: translateY(-$layout-base);
   }
 
   button {
